--- a/WebContent/assets/css/home.css
+++ b/WebContent/assets/css/home.css
@@ -2,15 +2,16 @@
 	Author: Albertus Kelvin
 */
 
-/* TOP NAVBAR BACKGROUND COLOR */
+/* TOP HORIZONTAL NAVBAR */
+
+/* BACKGROUND COLOR */
 /* #2d455c */
 #home_navbar {
 	background-color: #354b60;
 	height: 60px;
 }
 
-/* NAVBAR TEXT COLOR */
-
+/* TEXT COLOR */
 /* text: SaiTweet */
 .navbar-brand {
 	color: #ffffff;
@@ -41,6 +42,33 @@
 .nav.navbar-nav .menuItem a:hover, .nav.navbar-nav .menuItem a:focus { 
     background-color: transparent;
 	color: #ffffff;
+}
+
+/* VERTICAL NAVBAR */
+#analysis_navbar {
+	background-color: #f1f1f1
+}
+
+.navbar-fixed-left {
+  width: 140px;
+  position: fixed;
+  border-radius: 0;
+  height: 100%;
+}
+
+.navbar-fixed-left .navbar-nav > li {
+  float: none;  /* Cancel default li float: left */
+  width: 139px;
+}
+
+.navbar-fixed-left + .container {
+  padding-left: 160px;
+}
+
+/* On using dropdown menu (To right shift popuped) */
+.navbar-fixed-left .navbar-nav > li > .dropdown-menu {
+  margin-top: -50px;
+  margin-left: 140px;
 }
 
 /* CONTAINER FOR SEARCHING QUERY (BODY) */
@@ -187,4 +215,11 @@ input, button {
 /* Social media */
 #social-media {
 	margin-top: 50px;
+}
+
+/* CONTENT FOR ANALYSIS */
+.content-analysis {
+	margin-left:25%;
+	padding:1px 16px;
+	height:1000px;
 }
