--- a/WebContent/assets/css/home.css
+++ b/WebContent/assets/css/home.css
@@ -46,7 +46,8 @@
 
 /* VERTICAL NAVBAR */
 #analysis_navbar {
-	background-color: #f1f1f1
+	background-color: #dbdada;
+	padding-top:100px;
 }
 
 .navbar-fixed-left {
@@ -59,6 +60,11 @@
 .navbar-fixed-left .navbar-nav > li {
   float: none;  /* Cancel default li float: left */
   width: 139px;
+}
+
+.navbar-fixed-left .navbar-nav li a:hover, .navbar-fixed-left .navbar-nav li a:focus {
+	background-color: #898686;
+	color: black;
 }
 
 .navbar-fixed-left + .container {
