--- a/WebContent/assets/css/home.css
+++ b/WebContent/assets/css/home.css
@@ -63,11 +63,10 @@
 }
 
 .navbar-fixed-left {
-  width: 140px;
+  width: 155px;
   position: fixed;
   border-radius: 0;
-  height: 100%;
-  
+  height: 100%;  
   overflow: auto
 }
 
@@ -78,7 +77,7 @@
 
 .navbar-fixed-left .navbar-nav li a:hover, .navbar-fixed-left .navbar-nav li a:focus {
 	background-color: #898686;
-	color: black;
+	color: #000000;
 }
 
 .navbar-fixed-left + .container {
@@ -130,6 +129,12 @@ body {
 	width: 30px;
 	background-color: #576063;
 	color: #ffffff;
+}
+
+.activePrimary {
+	width: 100%;
+	background-color: #898686;
+	color: #000000;
 }
 
 /* toggle keyword when there is a hovering action */
@@ -254,7 +259,7 @@ input, button {
 .tweetContainer {
 	border-radius: 15px;
 	background-color: #ffffff;
-	margin-bottom: 90px;
+	margin-bottom: 5px;
 	display: table;
 }
 
@@ -279,4 +284,17 @@ td, th {
 	padding-right: 9px;
 	padding-bottom: 9px;
 	padding-left: 9px;
+}
+
+/* DETAIL BUTTON CONTAINER */
+.detailButtonContainer {
+	border-radius: 15px;
+	background-color: #c9c9c9;
+	padding-top: 5px;
+	padding-right: 10px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	margin-bottom: 40px;
+	width: 130px;
+	height: 30px;
 }
